--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,19 @@ name = "yomi"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = [ "mlua/vendored" ]
+lua_vendored = [ "mlua/vendored" ]
+
 [dependencies]
 alto_logger = "0.4.0"
 attohttpc = { version = "0.28.2", features = [ "json", "basic-auth", "form" ] }
 fastrand = "2.3.0"
 flume = { version = "0.11.1", default-features = false, features = [ "select", "eventual-fairness", "async" ] }
 log = { version = "0.4.25", features = [ "std" ] }
-mlua = { version = "0.10.2", features = [ "lua54", "serialize" ] } # "vendored"
+mlua = { version = "0.10.2", features = [ "lua54", "serialize" ] }
 regex = "1.11.1"
+rusqlite = { version = "0.33.0", features = ["bundled", "serde_json"] }
 serde = { version = "1.0.217", features = [ "derive" ] }
 serde_json = "1.0.137"
 simple_env_load = "0.2.0"
