--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rusqlite = { version = "0.33.0", features = ["bundled", "serde_json"] }
 serde = { version = "1.0.217", features = [ "derive" ] }
 serde_json = "1.0.137"
 simple_env_load = "0.2.0"
+strsim = "0.11.1"
 thiserror = "2.0.11"
 time = { version = "0.3.37", features = [ "macros", "formatting", "parsing", "serde" ] }
 tokio = { version = "1.43.0", features = [ "rt", "net", "time", "io-util", "macros" ] }
