--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = [ "mlua/vendored" ]
+default = [ "sqlite_vendored" ]
+sqlite_vendored = [ "rusqlite/bundled" ]
 lua_vendored = [ "mlua/vendored" ]
 
 [dependencies]
@@ -13,11 +14,11 @@ attohttpc = { version = "0.28.2", features = [ "json", "basic-auth", "form" ] }
 fastrand = "2.3.0"
 flume = { version = "0.11.1", default-features = false, features = [ "select", "eventual-fairness", "async" ] }
 log = { version = "0.4.25", features = [ "std" ] }
-mlua = { version = "0.10.2", features = [ "lua54", "serialize" ] }
+mlua = { version = "0.10.3", features = [ "lua54", "serialize" ] }
 regex = "1.11.1"
-rusqlite = { version = "0.33.0", features = [ "bundled", "serde_json" ] }
+rusqlite = { version = "0.33.0", features = [ "modern_sqlite", "serde_json" ] }
 serde = { version = "1.0.217", features = [ "derive" ] }
-serde_json = "1.0.137"
+serde_json = "1.0.138"
 simple_env_load = "0.2.0"
 strsim = "0.11.1"
 thiserror = "2.0.11"
@@ -26,8 +27,8 @@ tokio = { version = "1.43.0", features = [ "rt", "net", "time", "io-util", "macr
 twitch_message = { git = "https://github.com/museun/twitch_message", features = [ "std" ] }
 url = "2.5.4"
 
-[patch.crates-io]
-alto_logger = { path = "f:/forks/alto_logger" }
+# [patch.crates-io]
+# alto_logger = { path = "f:/forks/alto_logger" }
 
 [dev-dependencies]
-serde_json = "1.0.137"
+serde_json = "1.0.138"
